fix layout bug

--- a/sass/layout/_stops.scss
+++ b/sass/layout/_stops.scss
@@ -38,7 +38,7 @@
     &__dest {
         color: $color-dark-navy;
         font-weight: 300;
-        left: 27%;
+        margin-left: 10%;
     }
 
     &__arr {
